--- a/React.Net.Simple/Views/Home/Index.cshtml
+++ b/React.Net.Simple/Views/Home/Index.cshtml
@@ -5,7 +5,8 @@
 }
 
 <ol>
-    <li><a href="/home/reactdotnet">Pure React.net</a></li>
-    <li><a href="/home/habitat">Pure Habitat</a></li>
-    <li><a href="/home/hybridpage">Hybrid Page</a></li>
+    <li><a href="/home/reactdotnet">React.net Components (Nikon/Weir)</a></li>
+    <li><a href="/home/habitat">Habitat Components</a></li>
+    <li><a href="/home/hybridpage">Hybrid Page (Jotun)</a></li>
+    <li><a href="/home/habitatpage">Habitat Page</a></li>
 </ol>
