Updates for code-splitting

--- a/React.Net.Simple/Views/Home/Index.cshtml
+++ b/React.Net.Simple/Views/Home/Index.cshtml
@@ -8,5 +8,6 @@
     <li><a href="/home/reactdotnet">React.net Components (Nikon/Weir)</a></li>
     <li><a href="/home/habitat">Habitat Components</a></li>
     <li><a href="/home/hybridpage">Hybrid Page (Jotun)</a></li>
+    <li><a href="/home/hybridpage2">Hybrid Page 2 (Code Splitting)</a></li>
     <li><a href="/home/habitatpage">Habitat Page</a></li>
 </ol>
