--- a/React.Net.Simple/Views/Home/Habitat.cshtml
+++ b/React.Net.Simple/Views/Home/Habitat.cshtml
@@ -5,8 +5,13 @@
 
 
 <div data-component="Header" data-props='@Json.Serialize(Model.Header)'></div>
+<hr />
 <div data-component="Hero" data-props='@Json.Serialize(Model.Hero)'></div>
+<hr />
+<div data-component="Banner" data-props='@Json.Serialize(Model.Hero)'></div>
+<hr />
 <div data-component="Intro" data-props='@Json.Serialize(Model.Intro)'></div>
+<hr />
 <div data-component="Freetext" data-props='@Json.Serialize(Model.Freetext)'></div>
 
 <script asp-append-version="true" src="/scripts/habitat.bundle.js"></script>
